--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,20 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+:root {
+  box-sizing: border-box;
+  font-size: calc(1vw + 0.6em);
+}
+@media (min-width: 50em) {
+  :root {
+    font-size: 1.125em;
+  }
+}
+*,
+::before,
+::after {
+  box-sizing: inherit;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  margin: 5em 0 0 0;
+  /* background-color: rgba(94, 14, 14, 0.7); */
+  background-color: rgb(19, 16, 19);
 }
